--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-new-project",
   "type": "module",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@wdio/cli": "^8.14.6",
     "@wdio/cucumber-framework": "^8.14.6",
     "@wdio/local-runner": "^8.14.6",
