--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@wdio/cli": "^8.14.6",
     "@wdio/cucumber-framework": "^8.14.6",
     "@wdio/local-runner": "^8.14.6",
+    "@wdio/shared-store-service": "^8.14.6",
     "@wdio/spec-reporter": "^8.14.0"
   },
   "scripts": {
